main.css
/* CSS Reset của Eric Meyer */
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html,
body {
    height: 100%;
}

img,
picture,
video,
canvas,
svg {
    display: block;
    max-width: 100%;
    /*dòng này để set kích thước hình ảnh có chiều rộng tối đa bằng phần tử chứa nó, nếu không có ảnh quá lớn có thể gây tràn màn hình */
}

body {
    box-sizing: border-box;
    padding: 20px;
}

.cards {
    display: flex;
    /*Khi dùng display: flex, giá trị mặc định của align-items: stretch; nên nó sẽ làm cho các cột cao bằng nhau */
    margin-left: -30px;
    /* dòng này để căn đều hơn cho cái card đầu tiên */
}

.card {
    border-radius: 20px;
    overflow: hidden;
    background-color: white;
    width: calc(25% - 30px);
    /* Dòng này để chia các card mỗi card chiếm vị trí đều nhau trên màn hình do chúng ta có 4 card trừ đi 30px của margin left */
    margin-left: 30px;
}

.card-image {
    height: 200px;
    width: 100%;
    object-fit: cover;
}

.card-top {
    padding: 25px;
}

.card-title {
    font-weight: 900;
    margin-bottom: 25px;
}

.card-user {
    display: flex;
    align-items: center;
}

.card-user-avatar {
    width: 40px;
    height: 40px;
    object-fit: cover;
    border-radius: 100rem;
    flex-shrink: 0;
    /* dòng này cố định kích thước 40px x 40px không bị co lại khi dàn flex box*/
}

.card-user-info {
    padding-left: 20px;
    flex: 1;
    /* dòng này để thẻ này có chiếm hết toàn bộ diện tích còn lại trong flex box */
}

.card-user-top {
    display: flex;
    align-items: center;
    margin-bottom: 2px;
}

.card-user-top i {
    color: #20e35a;
    margin-left: 5px;
}

.card-user-name {
    font-weight: 600;
    font-size: 16px;
    line-height: 1;
}

.card-user-game {
    color: #999;
    font-weight: 500;
}

.card-bottom {
    padding: 25px;
    border-top: 2px solid #eee;
    display: flex;
    justify-content: space-between;
    align-items: center;

}

.card-live {
    color: white;
    background-color: red;
    display: flex;
    align-items: center;
    padding: 5px 10px;
    border-radius: 10px;
}

.card-live span {
    margin-left: 10px;
}

.card-watching {
    font-size: 15px;
    font-weight: 500;
    color: #999;

}

